 * imported 'calls<-' from oligoClasses

2009-11-19 R. Scharpf - committed version 1.5.5

 * removed a few of the classes (CrlmmSet, CrlmmSetFF, SnpCallSetPlusFF,...)
 * added CNSet class
 * segmentData slot in CNSet class is an extension of RangedData (defined in IRanges package)

2009-11-19 R. Scharpf - committed version 1.5.6 

 * fixed bugs in initialization of SnpCallSetPlus

2009-11-19 R. Scharpf - committed version 1.5.7

 * fixed bugs in addFeatureAnnotation.SnpCallSetPlus

2009-12-01 M. Ritchie - committed version 1.5.8

 * bug fixed in stripNormalize() [X+16,Y+16 which avoids log(0) = -Inf values, 
      removed inadvertantly in version 1.3.7, put back]
 * removed header checking from readIdatFiles() (seems to fail often).  
      Instead check that the number of SNPs agrees (to within +/- 10K SNPs)

2009-12-04 B. Carvalho - committed version 1.5.11

 * moved IRanges and oligoClasses to Depends (DESCRIPTION)

2009-12-23 R. Scharpf - committed version 1.5.17

** updated first half of inst/scripts/copynumber.Rnw, as well as a few of the help files

2009-12-23 R. Scharpf - committed version 1.5.18

** removed generics for addFeatureAnnotation and GT<-

2009-12-24 M. Ritchie - committed version 1.5.19

 * Added 'humanomni1quadv1b" to chip types allowed in RGtoXY()

2010-01-20 R. Scharpf - committed version 1.5.21
 * Added CopyNumberVariants to DESCRIPTION

2010-01-20 R. Scharpf - committed version 1.5.22
 * restored inst/doc/crlmmDownstream.Rnw

2010-02-04 M. Ritchie - committed version 1.5.23
 * crlmmIllumina now exported in NAMESPACE (removed at some point)
 * new function crlmmIlluminaV2() which reads in .idats and genotypes 
in the one function to reduce memory usage (not exported as yet)
 * readIdatFiles() modified to no longer store number of beads and beads SE
to save memory.  Instead, 'zero', which indicates which SNPs have zero beads 
is stored in the assayData slot.
 * now store 'zero' with copy number AB intensities in preprocessInfinium2()