@@ -11,7 +11,7 @@ crlmmIllumina(RG, XY, stripNorm=TRUE, method="quantile",
       useTarget=TRUE, row.names=TRUE, col.names=TRUE,
       probs=c(1/3, 1/3, 1/3), DF=6, SNRMin=5,
       gender=NULL, seed=1, save.it=FALSE, load.it=FALSE,
-      intensityFile, mixtureSampleSize=10^5,
+      snpFile, cnFile, mixtureSampleSize=10^5,
       eps=0.1, verbose=TRUE, cdfName, sns, recallMin=10,
       recallRegMin=1000, returnParams=FALSE, badSNP=0.7)
 }
@@ -33,10 +33,12 @@ crlmmIllumina(RG, XY, stripNorm=TRUE, method="quantile",
     defining sex. (1 - male; 2 - female)}
   \item{seed}{'integer' scalar for random number generator (used to
     sample \code{mixtureSampleSize} SNPs for mixture model.}
-  \item{save.it}{'logical'. Save preprocessed data?}
-  \item{load.it}{'logical'. Load preprocessed data to speed up analysis?}
-  \item{intensityFile}{'character' with filename of preprocessed data to
+  \item{save.it}{'logical'. Save preprocessed SNP and copy number data?}
+  \item{load.it}{'logical'. Load preprocessed SNP data to speed up analysis?}
+  \item{snpFile}{'character' with filename of preprocessed SNP data to
     be saved/loaded.}
+  \item{cnFile}{'character' with filename of preprocessed copy number 
+    data to be saved.}
   \item{mixtureSampleSize}{'integer'. The number of SNP's to be used
     when fitting the mixture model.}
   \item{eps}{Minimum change for mixture model.}
